<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>

    <item android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24"/>

    <item android:id="@+id/nav_purchase"
        android:title="@string/purchase"
        android:icon="@drawable/ic_baseline_payment_24"/>

    <item android:id="@+id/nav_setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_baseline_settings_24"/>

    <item android:id="@+id/nav_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_baseline_favorite_24"/>

</menu>