<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.AboutUsActivity"
        android:background="@drawable/background"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/about_gradiant_bg"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="0dp" />

        <include layout="@layout/toolbar"
            android:id="@+id/toolbarLayout"/>


        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
            android:layout_marginTop="10dp"
            android:textSize="46dp"
            android:fontFamily="@font/lemon_jelly"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_description"
            android:textColor="@color/white"
            android:lineSpacingExtra="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            android:layout_margin="20dp"
            android:fontFamily="@font/helvetica"
            android:textSize="16dp"
            />

        <TextView
            android:id="@+id/developerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            android:layout_margin="20dp"
            android:fontFamily="@font/helvetica"
            android:textSize="16dp"

            />




        <Button
            android:id="@+id/btn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/developerName"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:background="@drawable/button_bg1"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
